--- a/MakeUp/src/styles.css
+++ b/MakeUp/src/styles.css
@@ -1,1 +1,25 @@
-/* You can add global styles to this file, and also import other style files */
+/* paginator */
+.paginator{
+    font-family: 'Lato', sans-serif;
+    font-size: 15px;
+}
+
+.paginator .ngx-pagination .current {
+    background: #f2d0d9;
+    border-radius: 100%;
+    padding-left: 9px;
+    padding-right: 9px;
+}
+
+.paginator .ngx-pagination a:hover, .ngx-pagination button:hover {
+    background: #d4d4d4;
+    border-radius: 3px;
+    padding-left: 9px;
+    padding-right: 9px;
+    text-decoration: none;
+}
+
+.paginator .ngx-pagination a:focus, .ngx-pagination button:focus {
+    outline: none;
+    background: #d4d4d4;
+}
