--- a/MakeUp/src/app/componentes/detalle/detalle.component.html
+++ b/MakeUp/src/app/componentes/detalle/detalle.component.html
@@ -1,52 +1,40 @@
 <html>
 <body>
   <main>
-    <div class="card">
+    <div class="card" >
       <div class="card__title">
-        <div class="icon">
-          <a href="#"><i class="fa fa-arrow-left"></i></a>
+        <div class="icon" [routerLink]="['/']">
+          <a href="#"><img src="https://img.icons8.com/ios/50/000000/back--v1.png"/></a>
         </div>
-        <h3>New products</h3>
+        <h3 >{{productoId.category}}</h3>
       </div>
       <div class="card__body">
         <div class="half">
-          <div class="featured_text">
-            <h1>Nurton</h1>
-            <p class="sub">Office Chair</p>
-            <p class="price">$210.00</p>
-          </div>
           <div class="image">
-            <img src="https://images-na.ssl-images-amazon.com/images/I/613A7vcgJ4L._SL1500_.jpg" alt="">
+            <img [src]="productoId.api_featured_image" alt="">
           </div>
         </div>
         <div class="half">
+          <div class="featured_text">
+            <h1>{{productoId.name}}</h1>
+            <p class="sub">{{productoId.category}}</p>
+            <p class="price">{{productoId.price}}{{productoId.price_sign}}</p>
+          </div>
           <div class="description">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero voluptatem nam pariatur voluptate perferendis, asperiores aspernatur! Porro similique consequatur, nobis soluta minima, quasi laboriosam hic cupiditate perferendis esse numquam magni.</p>
+            <p>{{productoId.description}}</p>
           </div>
-          <span class="stock"><i class="fa fa-pen"></i> In stock</span>
-          <div class="reviews">
-            <ul class="stars">
-              <li><i class="fa fa-star"></i></li>
-              <li><i class="fa fa-star"></i></li>
-              <li><i class="fa fa-star"></i></li>
-              <li><i class="fa fa-star"></i></li>
-              <li><i class="fa fa-star-o"></i></li>
-            </ul>
-            <span>(64 reviews)</span>
-          </div>
+          <span [ngClass]="{noStock : (productoId.price === '0.0')}" class="stock">Stock</span>
         </div>
       </div>
       <div class="card__footer">
         <div class="recommend">
-          <p>Recommended by</p>
-          <h3>Andrew Palmer</h3>
+          <h3>{{productoId.brand}}</h3> 
         </div>
-        <div class="action">
-          <button type="button">Add to cart</button>
+        <div class="action" [ngClass]="{disable : (productoId.price === '0.0')}">
+          <a [href]="productoId.product_link" >Add to cart</a>
         </div>
       </div>
     </div>
   </main>
 </body>
-
 </html>
