--- a/MakeUp/src/styles.css
+++ b/MakeUp/src/styles.css
@@ -23,3 +23,6 @@
     outline: none;
     background: #d4d4d4;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
