--- a/MakeUp/src/styles.css
+++ b/MakeUp/src/styles.css
@@ -1,11 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;700&display=swap');
+@font-face {
+    font-family: 'rodrigues';
+    src: url('../src/assets/tipografia/rodrigues.woff2') format('woff2'),
+         url('../src/assets/tipografia/rodrigues.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+:root {
+    --color-princial: rgb(213, 160, 180);
+    --color-secundario: rgba(1,38,35);
+    --fuente-princial: 'Montserrat', sans-serif;
+    --fuente-secundaria: 'rodrigues';
+    --fontsize: 1em;
+    
+}
 /* paginator */
 .paginator{
-    font-family: 'Lato', sans-serif;
-    font-size: 15px;
+    font-family: var(--fuente-primaria)!important;
+    --fontsize: 1em!important;
 }
 
 .paginator .ngx-pagination .current {
-    background: #f2d0d9;
+    background: var(--color-princial);
     border-radius: 100%;
     padding-left: 9px;
     padding-right: 9px;
@@ -24,5 +41,4 @@
     background: #d4d4d4;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
