--- a/MakeUp/src/app/app.component.css
+++ b/MakeUp/src/app/app.component.css
@@ -1,6 +1,5 @@
 
 header{
-
     width: 100%;
     height: auto;
     border-bottom: 1px solid rgba(1,64,64,0.25) 75% ;
@@ -35,8 +34,6 @@ nav ul {
 nav ul li a{
     text-decoration: none;
     color: black;
-
-
 }
 nav ul{
 width: 100%;
@@ -47,6 +44,7 @@ margin: 0 5% 5% 0;
 }
 
 footer{
+ 
     width: 100%;
     height: 20vh;
     margin-top: 3%;
@@ -77,6 +75,10 @@ footer ul li a{
    
 
 }
+footer h5{
+  font-family: var(--fuente-primaria);
+  font-weight: 200;
+}
 /* Footer RRSS */
 
   
@@ -85,8 +87,6 @@ footer ul li a{
     outline: none !important;
     -webkit-tap-highlight-color: transparent;
   }
-  
-
   
   .wrapper {
     display: inline-flex;
