--- a/MakeUp/src/app/componentes/listado/listado.component.css
+++ b/MakeUp/src/app/componentes/listado/listado.component.css
@@ -1,4 +1,41 @@
+ /* Filtros */
 
+ .filtros{
+  margin: 2%;
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+}
+.filtros .form-select{
+ border: none!important;
+ box-shadow: none!important;
+ outline: none!important;
+}
+
+.form-check-input:checked {
+  background-color: var(--color-princial);
+  border-color: var(--color-secundario);
+}
+.form-check-input:focus {
+border-color: rgba(255, 255, 255, 0);
+outline: 0;
+box-shadow:none!important;
+}
+
+.loading{
+margin: auto!important;
+width: 100%;
+text-align: center;
+
+}
+
+.filtros h3{
+font-size: calc(var(--fontsize)*2.5);
+font-family: var(--fuente-secundaria);
+}
+.filtros label{
+font-family: var(--fuente-primaria);
+}
   .align-center {
     -webkit-box-align: center;
     -ms-flex-align: center;
@@ -164,14 +201,14 @@
   }
   
   .info-inner .p-name {
-    font-family: 'PT Sans', sans-serif;
-    font-size: 18px;
+    font-family: var(--fuente-primaria);
+    font-size: calc(var(--fontsize)*1.5);
     color: #252525;
   }
   
   .info-inner .p-tipo {
-    font-family: 'Lato', sans-serif;
-    font-size: 12px;
+    font-family: var(--fuente-primaria);
+    font-size: var(--fontsize);
     text-transform: uppercase;
     color: #8c8c8c;
   }
@@ -190,7 +227,8 @@
     position: absolute;
     width: 100%;
     bottom: -20px;
-    font-family: 'PT Sans', sans-serif;
+    font-size: calc(var(--fontsize)*2.5);
+    font-family: var(--fuente-secundaria);
     color: #828282;
     opacity: 0;
   }
@@ -232,7 +270,7 @@
     -ms-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    font-size: 16px;
+    font-size: calc(var(--fontsize)*1.5);
     color: #252525;
   }
 
@@ -263,24 +301,14 @@
     transform: translate(-50%, -50%);
   }
   .cart .add-to-cart .txt {
-    font-size: 12px;
+    font-family: var(--fuente-primaria);
+    font-size: var(--fontsize);
     color: #fff;
     letter-spacing: 0.045em;
     text-transform: uppercase;
     white-space: nowrap;
   }
  
-  .color{
-      display: flex;
-      align-items: center;
-      justify-content: space-evenly;
-  }
-  .colorUn{
-      width: 15px;
-      height: 15px;
-      border-radius: 100%;
-      background-color: #252525;
-  }
 
   /* Paginatio */
   pagination-controls{
@@ -288,34 +316,4 @@
      margin: 3% 0 ; 
   }
 
-  /* Filtros */
-
-  .filtros{
-    margin: 2%;
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
-  }
-  .filtros .form-select{
-   border: none!important;
-   box-shadow: none!important;
-   outline: none!important;
-  }
-
-  .form-check-input:checked {
-    background-color: rgb(139,93,111,0.25);
-    border-color: rgba(1,38,35,0.25);
-}
-.form-check-input:focus {
-  border-color: rgba(255, 255, 255, 0);
-  outline: 0;
-  box-shadow:none!important;
-}
-
-.loading{
-  margin: auto!important;
-  width: 100%;
-
-  text-align: center;
-
-}
+ 
